# policy-pal

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  app.py  pyproject.toml
backend/backend/: app.py  bills_test.py  test_app.py  user_test.py
backend/source/: backend.rst  conf.py  index.rst
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/policypal/: cypress.config.ts  package-lock.json  package.json  tsconfig.json
frontend/policypal/cypress/: README.md
frontend/policypal/cypress/e2e/: advanced_search.cy.ts  billCard.cy.ts  charts.cy.ts  fullBillView.cy.ts  login.cy.ts  navbar.cy.ts  register.cy.ts  searchBar.cy.ts  voteButton.cy.ts
frontend/policypal/cypress/fixtures/: demographics.json  example.json
frontend/policypal/src/app/: globals.css  layout.tsx  page.tsx
frontend/policypal/src/app/about/: page.tsx
frontend/policypal/src/app/auth/: page.tsx
frontend/policypal/src/app/bills/[id]/: page.tsx
frontend/policypal/src/app/search/: page.tsx
frontend/policypal/src/app/search-adv/: page.tsx
frontend/policypal/src/app/trending/: page.tsx
frontend/policypal/src/components/: Apitest.tsx  BillCard.tsx  Charts.tsx  FullBillView.tsx  LoadingBills.tsx  Navbar.tsx  SearchBar.tsx  VoteButton.tsx
frontend/policypal/src/contexts/: UserContext.tsx
frontend/policypal/src/lib/: api.ts
frontend/policypal/src/types/: bill.ts
frontend/src/: App.js  searchserver.js  test.html
frontend/src/app/: page.tsx
frontend/src/app/api/summarize/: route.js
frontend/src/components/: Header.js  SearchQuery.js  SearchResults.js
frontend/src/pages/: Home.css  Home.js  Login.js  SignUp.js
frontend/src/pages/__tests__/: Login.test.js  SignUp.test.js
pol-pal/: package-lock.json  package.json
pol-pal/src/app/: globals.css
pol-pal/src/app/api/: BillSummary.js
pol-pal/src/app/api/summarize/: route.js
policy-pal-backend/: pyproject.toml  test.py  wsgi.py
policy-pal-backend/policy_pal/: app.py
