[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "alexedw01",email = "alexedw01@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask-cors (>=5.0.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "cloud-sql-python-connector (>=1.16.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "openai (==0.28)",
    "click (>=8.1.8,<9.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autodoc-typehints (>=3.1.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.0"
sphinx-autodoc-typehints = "^3.1.0"

