[tool.poetry]
name = "policy-pal-backend"
version = "0.1.0"
description = "Backend for Policy Pal, an app to track and summarize congressional bills."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
packages = [
    { include = "policy_pal" }
]

[tool.poetry.dependencies]
python = "^3.13.2"
Flask = "^2.2.0"
flask-pymongo = "^2.3.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
click = "^8.1.0"
openai = "^0.27.0"
apscheduler = "^3.11.0"
beautifulsoup4 = "^4.13.3"
flask-jwt-extended = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"